[B]1.7.2[/B]

- Revisada la búsqueda de año en FA

[B]1.7.1[/B]

- Revisada la búsqueda avanzada de título en FA
- Revisada la búsqueda de título original en FA
- Corregida la búsqueda de género para no incluir topics

[B]1.7.0[/B]

- Búsqueda unificada tanto en FA como en FA mobile
- Se mantiene la elección de FA o FA mobile para dar redundancia

[B]1.6.4[/B]

- Revisada la búsqueda de país
- Limpiadas las referencias a IMPA - HDTrailers

[B]1.6.3[/B]

- Revisada la búsqueda de director
- Revisada la búsqueda de puntuación FA
- Revisada la búsqueda en ficheros .nfo

[B]1.6.2[/B]

- Revisada la carga de información de ficheros .nfo
- Revisada la obtención del póster principal de FilmAffinity

[B]1.6.1[/B]

- Añadida la posibilidad de elegir entre la web móvil o principal de FilmAffinity
- Revisados los patrones de búsqueda en FilmAffinity

[B]1.6.0[/B]

- Modificada la codificación del scraper a UTF-8
- Actualizada la URL de Google con el https
- Modificada la búsqueda de FilmAffinity para utilizar la versión móvil
- Añadida la opción de obtener el eslogan y la calificación por edades de TMDB
- Reestructuradas las secciones de opciones de extras IMDB y TMDB
- Mejorada la búsqueda en trakt.tv
- Añadida la búsqueda en fanart.tv
- Añadida detección del IMDBid a través de nfourl
- Modificada la búsqueda de IMDB para utilizar funciones propias de su scraper
- Revisada la obtención de posters y trailers de FilmAffinity
- Revisado el refinado de la búsqueda en IMDB por apellido de director

[B]1.5.9[/B]

- Revisada la obtención de año, dirección, guión y título original de la web de FilmAffinity

[B]1.5.8[/B]

- Revisada la obtención de títulos y puntuaciones de la web de FilmAffinity

[B]1.5.7[/B]

- Revisada la búsqueda condicional de HDTrailers

[B]1.5.6[/B]

- Soporte para la actualización de la web de FilmAffinity

[B]1.5.5[/B]

- Mejorada la búsqueda de títulos en FilmAffinity con caracteres especiales