@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<scraper framework="1.1" date="2017-03-06">
+<scraper framework="1.1" date="2017-03-14">
 
 	<!--obtención de la url desde el fichero .nfo -->
 	<NfoUrl dest="3">
@@ -90,7 +90,7 @@
 			<!-- título original -->
 			<!-- eliminar "(Disneys's )?" y usar \1 cuando filmaffinity deje de añadirlo) -->
 			<RegExp input="$$1" output="\2" dest="12">
-				<expression trim="1">Título original&lt;/dt&gt;(Disney's )?(.+?)(\(AKA|aka +&lt;|&lt;/dd&gt;)</expression>
+				<expression trim="1">T[ií]tulo original&lt;/dt&gt;(Disney's )?(.+?)(\(AKA|aka +&lt;|&lt;/dd&gt;)</expression>
 			</RegExp>
 			<RegExp input="$$12" conditional="EnableOriginalTitles" output="&lt;title&gt;\1&lt;/title&gt;" dest="5">
 				<expression noclean="1" />
@@ -124,13 +124,13 @@
 			
 			<!-- duración -->
 			<RegExp input="$$1" output="&lt;runtime&gt;\1&lt;/runtime&gt;" dest="5+">
-				<expression trim="1">Duración&lt;/dt&gt;(.+?)&lt;/dd&gt;</expression>
+				<expression trim="1">Duraci[oó]n&lt;/dt&gt;(.+?)&lt;/dd&gt;</expression>
 			</RegExp>
 			
 			<!-- género -->
 			<RegExp input="$$9" output="&lt;genre&gt;\1&lt;/genre&gt;" dest="5+">
 				<RegExp input="$$1" output="\1" dest="9">
-					<expression noclean="1">Género&lt;/dt&gt;(.+?)&lt;/dd&gt;</expression>
+					<expression noclean="1">G[eé]nero&lt;/dt&gt;(.+?)&lt;/dd&gt;</expression>
 				</RegExp>
 				<expression repeat="yes" trim="1">genre[^&gt;]+&gt;([^&lt;]+)</expression>
 			</RegExp>
@@ -138,7 +138,7 @@
 			<!-- guión -->
 			<RegExp input="$$9" output="&lt;credits&gt;\1&lt;/credits&gt;" dest="5+">
 				<RegExp input="$$1" output="\1" dest="9">
-					<expression trim="1">Guión&lt;/dt&gt;(.+?)&lt;/dd&gt;</expression>
+					<expression trim="1">Gui[oó]n&lt;/dt&gt;(.+?)&lt;/dd&gt;</expression>
 				</RegExp>
 				<expression repeat="yes" trim="1">(.+?)(&amp;amp;|;|,|$)</expression>
 			</RegExp>
@@ -146,7 +146,7 @@
 			<!-- país -->
 			<RegExp input="$$9" output="&lt;country&gt;\2&lt;/country&gt;" dest="5+">
 				<RegExp input="$$1" output="\1" dest="9">
-					<expression trim="1">País&lt;/dt&gt;(.+?)&lt;/dd&gt;</expression>
+					<expression trim="1">Pa[ií]s&lt;/dt&gt;(.+?)&lt;/dd&gt;</expression>
 				</RegExp>
 				<expression>(&nbsp;)*([^0-9/]+)</expression>
 			</RegExp>
